--- a/package.json
+++ b/package.json
@@ -2,5 +2,27 @@
   "name": "vuetify-study",
   "version": "1.0.0",
   "repository": "https://github.com/ony3000/vuetify-study.git",
-  "author": "Hyeonjong <nianelo4@gmail.com>"
+  "author": "Hyeonjong <nianelo4@gmail.com>",
+  "dependencies": {
+    "@babel/polyfill": "^7.0.0",
+    "@mdi/font": "^3.2.89",
+    "vue": "^2.5.21",
+    "vue-router": "^3.0.2",
+    "vuetify": "^1.3.14"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.2.0",
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "babel-loader": "^8.0.4",
+    "css-loader": "^2.0.0",
+    "file-loader": "^2.0.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "vue-loader": "^15.4.2",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.5.21",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2"
+  }
 }
