--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "vuetify-study",
   "version": "1.0.0",
+  "scripts": {
+    "start": "webpack-dev-server"
+  },
   "repository": "https://github.com/ony3000/vuetify-study.git",
   "author": "Hyeonjong <nianelo4@gmail.com>",
   "dependencies": {
