--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "@mdi/font": "^3.2.89",
+    "express": "^4.16.2",
+    "socket.io": "^2.2.0",
     "vue": "^2.5.21",
     "vue-router": "^3.0.2",
     "vuetify": "^1.3.14"
