Add extra dependencies

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@babel/polyfill": "^7.0.0",
     "@mdi/font": "^3.2.89",
     "express": "^4.16.2",
+    "lodash": "^4.17.11",
     "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "uuid": "^3.3.2",
     "vue": "^2.5.21",
     "vue-router": "^3.0.2",
